[package]
name = "pixels"
description = "A tiny library providing a GPU-powered pixel frame buffer."
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2018"
repository = "https://github.com/parasyte/pixels"
readme = "README.md"
keywords = ["pixels", "2D", "GPU", "framebuffer"]
categories = ["graphics", "rendering"]
license = "MIT"
include = [
    "/Cargo.*",
    "/LICENSE",
    "/README.md",
    "/img/pixels.png",
    "/shaders/*.spv",
    "/src/**/*",
]

[dependencies]
thiserror = "1.0.15"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", branch = "gecko" }
pollster = "0.2"
ultraviolet = "0.4.6"

[dev-dependencies]
pixels-mocks = { path = "pixels-mocks" }
winit = "0.22.0"

[workspace]
members = [
    "examples/*",
    "pixels-mocks",
]

[patch.crates-io]
#gfx-hal = { version = "0.5.0", path = "../gfx/src/hal" }
#gfx-backend-empty = { version = "0.5.0", path = "../gfx/src/backend/empty" }
#gfx-backend-vulkan = { version = "0.5.0", path = "../gfx/src/backend/vulkan" }
#gfx-backend-dx12 = { version = "0.5.0", path = "../gfx/src/backend/dx12" }
#gfx-backend-dx11 = { version = "0.5.0", path = "../gfx/src/backend/dx11" }
#gfx-descriptor = { version = "0.1.0", path = "../gfx-extras/gfx-descriptor" }
#gfx-memory = { version = "0.1.0", path = "../gfx-extras/gfx-memory" }
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "b11a4e3" }
wasm-bindgen-futures = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "b11a4e3" }
web-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "b11a4e3" }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "b11a4e3" }
