[package]
name = "pixels"
description = "A tiny library providing a GPU-powered pixel frame buffer."
version = "0.2.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2018"
repository = "https://github.com/parasyte/pixels"
readme = "README.md"
keywords = ["pixels", "2D", "GPU", "framebuffer"]
categories = ["graphics", "rendering"]
license = "MIT"
include = [
    "/Cargo.*",
    "/LICENSE",
    "/README.md",
    "/img/pixels.png",
    "/shaders/*.spv",
    "/src/**/*",
]

[dependencies]
raw-window-handle = "0.3"
thiserror = "1.0"
ultraviolet = "0.4"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "a79d90dc1674dc027d18795c1f166d4332319cd4" }

[dev-dependencies]
pixels-mocks = { path = "internals/pixels-mocks" }
winit = "0.22"

[workspace]
members = [
    "examples/*",
    "internals/*",
]
