[package]
name = "minimal-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2018"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
pixels = { path = "../.." }
winit = { version = "0.22.0", features = ["web-sys"] }
winit_input_helper = "0.6.0"
web-sys = "0.3.44"
wasm-bindgen-futures = "0.4.17"
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"
